include/libsettings/settings.h

/**
 * @brief   Settings type.
 */
typedef int settings_type_t;
/**
 * @struct  settings_t
 *
 * @brief   Opaque context for settings.
 */
typedef struct settings_s settings_t;
/**
 * @brief Settings write error codes
 */
typedef enum settings_write_res_e {
  SETTINGS_WR_OK = 0,               /**< Setting written               */
  SETTINGS_WR_VALUE_REJECTED = 1,   /**< Setting value invalid   */
  SETTINGS_WR_SETTING_REJECTED = 2, /**< Setting does not exist */
  SETTINGS_WR_PARSE_FAILED = 3,     /**< Could not parse setting value */
  /* READ_ONLY:MODIFY_DISABLED ~= Permanent:Temporary */
  SETTINGS_WR_READ_ONLY = 4,       /**< Setting is read only          */
  SETTINGS_WR_MODIFY_DISABLED = 5, /**< Setting is not modifiable     */
  SETTINGS_WR_SERVICE_FAILED = 6,  /**< System failure during setting */
  SETTINGS_WR_TIMEOUT = 7,         /**< Request wasn't replied in time */
} settings_write_res_t;
/**
 * @brief   Settings notify callback.
 * @details Signature of a user-provided callback function to be executed
 *          after a setting value is updated.
 *
 * @note    The setting value will be updated _before_ the callback is executed.
 *          If the callback returns an error, the setting value will be
 *          reverted to the previous value.
 *
 * @param[in] context       Pointer to the user-provided context.
 *
 * @return                  The operation result.
 * @retval 0                Success. The updated setting value is acceptable.
 * @retval -1               The updated setting value should be reverted.
 */
typedef int (*settings_notify_fn)(void *context);
/**
 * @brief   Register an enum type.
 * @details Register an enum as a settings type.
 *
 * @param[in] ctx           Pointer to the context to use.
 * @param[in] enum_names    Null-terminated array of strings corresponding to
 *                          the possible enum values.
 * @param[out] type         Pointer to be set to the allocated settings type.
 *
 * @return                  The operation result.
 * @retval 0                The enum type was registered successfully.
 * @retval -1               An error occurred.
 */
LIBSETTINGS_DECLSPEC int settings_register_enum(settings_t *ctx,
                                                const char *const enum_names[],
                                                settings_type_t *type);
/**
 * @brief   Register a setting.
 * @details Register a persistent, user-facing setting.
 *
 * @note    The specified notify function will be executed from this function
 *          during initial registration.
 *
 * @param[in] ctx           Pointer to the context to use.
 * @param[in] section       String describing the setting section.
 * @param[in] name          String describing the setting name.
 * @param[in] var           Address of the setting variable. This location will
 *                          be written directly by the settings module.
 * @param[in] var_len       Size of the setting variable.
 * @param[in] type          Type of the setting.
 * @param[in] notify        Notify function to be executed when the setting is
 *                          written and during initial registration.
 * @param[in] notify_context Context passed to the notify function.
 *
 * @return                  The operation result.
 * @retval 0                The setting was registered successfully.
 * @retval -1               An error occurred.
 */
LIBSETTINGS_DECLSPEC int settings_register_setting(settings_t *ctx,
                                                   const char *section,
                                                   const char *name,
                                                   void *var,
                                                   size_t var_len,
                                                   settings_type_t type,
                                                   settings_notify_fn notify,
                                                   void *notify_context);
/**
 * @brief   Register a read-only setting.
 * @details Register a read-only, user-facing setting.
 *
 * @param[in] ctx           Pointer to the context to use.
 * @param[in] section       String describing the setting section.
 * @param[in] name          String describing the setting name.
 * @param[in] var           Address of the setting variable. This location will
 *                          be written directly by the settings module.
 * @param[in] var_len       Size of the setting variable.
 * @param[in] type          Type of the setting.
 *
 * @return                  The operation result.
 * @retval 0                The setting was registered successfully.
 * @retval -1               An error occurred.
 */
LIBSETTINGS_DECLSPEC int settings_register_readonly(settings_t *ctx,
                                                    const char *section,
                                                    const char *name,
                                                    const void *var,
                                                    size_t var_len,
                                                    settings_type_t type);
/**
 * @brief   Create and add a watch only setting.
 * @details Create and add a watch only setting.
 *
 * @param[in] ctx           Pointer to the context to use.
 * @param[in] section       String describing the setting section.
 * @param[in] name          String describing the setting name.
 * @param[in] var           Address of the setting variable. This location will
 *                          be written directly by the settings module.
 * @param[in] var_len       Size of the setting variable.
 * @param[in] type          Type of the setting.
 * @param[in] notify        Notify function to be executed when the setting is
 *                          updated by a write response
 * @param[in] notify_context Context passed to the notify function.
 *
 * @return                  The operation result.
 * @retval 0                The setting was registered successfully.
 * @retval -1               An error occurred.
 */
LIBSETTINGS_DECLSPEC int settings_register_watch(settings_t *ctx,
                                                 const char *section,
                                                 const char *name,
                                                 void *var,
                                                 size_t var_len,
                                                 settings_type_t type,
                                                 settings_notify_fn notify,
                                                 void *notify_context);
/**
 * @brief   Write a new value for registered setting.
 * @details Call will block until write response or internal timeout.
 *
 * @param[in] ctx           Pointer to the context to use.
 * @param[in] section       String describing the setting section.
 * @param[in] name          String describing the setting name.
 * @param[in] value         Address of the value variable.
 * @param[in] value_len     Size of the value variable.
 * @param[in] type          Type of the setting.
 *
 * @return                  The operation result.
 * @retval -1               Sending of the request failed.
 * @retval 0                The setting was written successfully.
 * @retval >0               Response returned an error @see settings_write_res_t
 */
LIBSETTINGS_DECLSPEC settings_write_res_t settings_write(settings_t *ctx,
                                                         const char *section,
                                                         const char *name,
                                                         const void *value,
                                                         size_t value_len,
                                                         settings_type_t type);
/**
 * @brief   Write a new value for registered setting of type int.
 * @details Call will block until write response or internal timeout.
 *
 * @param[in] ctx           Pointer to the context to use.
 * @param[in] section       String describing the setting section.
 * @param[in] name          String describing the setting name.
 * @param[in] value         Value to be written.
 *
 * @return                  The operation result.
 * @retval -1               Sending of the request failed.
 * @retval 0                The setting was written successfully.
 * @retval >0               Response returned an error @see settings_write_res_t
 */
LIBSETTINGS_DECLSPEC settings_write_res_t settings_write_int(settings_t *ctx,
                                                             const char *section,
                                                             const char *name,
                                                             int value);
/**
 * @brief   Write a new value for registered setting of type float.
 * @details Call will block until write response or internal timeout.
 *
 * @param[in] ctx           Pointer to the context to use.
 * @param[in] section       String describing the setting section.
 * @param[in] name          String describing the setting name.
 * @param[in] value         Value to be written.
 *
 * @return                  The operation result.
 * @retval -1               Sending of the request failed.
 * @retval 0                The setting was written successfully.
 * @retval >0               Response returned an error @see settings_write_res_t
 */
LIBSETTINGS_DECLSPEC settings_write_res_t settings_write_float(settings_t *ctx,
                                                               const char *section,
                                                               const char *name,
                                                               float value);
/**
 * @brief   Write a new value for registered setting of type str.
 * @details Call will block until write response or internal timeout.
 *
 * @param[in] ctx           Pointer to the context to use.
 * @param[in] section       String describing the setting section.
 * @param[in] name          String describing the setting name.
 * @param[in] str           Value to be written.
 *
 * @return                  The operation result.
 * @retval -1               Sending of the request failed.
 * @retval 0                The setting was written successfully.
 * @retval >0               Response returned an error @see settings_write_res_t
 */
LIBSETTINGS_DECLSPEC settings_write_res_t settings_write_str(settings_t *ctx,
                                                             const char *section,
                                                             const char *name,
                                                             const char *str);