rust/libsettings_wrapper.h

typedef unsigned int uint32_t;
typedef unsigned long size_t;
typedef uint32_t size_t;