rust/libsettings-sys/src/bindings.rs

extern "C" {
    #[doc = " @brief   Register an enum type."]
    #[doc = " @details Register an enum as a settings type."]
    #[doc = ""]
    #[doc = " @param[in] ctx           Pointer to the context to use."]
    #[doc = " @param[in] enum_names    Null-terminated array of strings corresponding to"]
    #[doc = "                          the possible enum values."]
    #[doc = " @param[out] type         Pointer to be set to the allocated settings type."]
    #[doc = ""]
    #[doc = " @return                  The operation result."]
    #[doc = " @retval 0                The enum type was registered successfully."]
    #[doc = " @retval -1               An error occurred."]
    pub fn settings_register_enum(
        ctx: *mut settings_t,
        enum_names: *const *const ::std::os::raw::c_char,
        type_: *mut settings_type_t,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " @brief   Register a setting."]
    #[doc = " @details Register a persistent, user-facing setting."]
    #[doc = ""]
    #[doc = " @note    The specified notify function will be executed from this function"]
    #[doc = "          during initial registration."]
    #[doc = ""]
    #[doc = " @param[in] ctx           Pointer to the context to use."]
    #[doc = " @param[in] section       String describing the setting section."]
    #[doc = " @param[in] name          String describing the setting name."]
    #[doc = " @param[in] var           Address of the setting variable. This location will"]
    #[doc = "                          be written directly by the settings module."]
    #[doc = " @param[in] var_len       Size of the setting variable."]
    #[doc = " @param[in] type          Type of the setting."]
    #[doc = " @param[in] notify        Notify function to be executed when the setting is"]
    #[doc = "                          written and during initial registration."]
    #[doc = " @param[in] notify_context Context passed to the notify function."]
    #[doc = ""]
    #[doc = " @return                  The operation result."]
    #[doc = " @retval 0                The setting was registered successfully."]
    #[doc = " @retval -1               An error occurred."]
    pub fn settings_register_setting(
        ctx: *mut settings_t,
        section: *const ::std::os::raw::c_char,
        name: *const ::std::os::raw::c_char,
        var: *mut ::std::os::raw::c_void,
        var_len: size_t,
        type_: settings_type_t,
        notify: settings_notify_fn,
        notify_context: *mut ::std::os::raw::c_void,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " @brief   Register a read-only setting."]
    #[doc = " @details Register a read-only, user-facing setting."]
    #[doc = ""]
    #[doc = " @param[in] ctx           Pointer to the context to use."]
    #[doc = " @param[in] section       String describing the setting section."]
    #[doc = " @param[in] name          String describing the setting name."]
    #[doc = " @param[in] var           Address of the setting variable. This location will"]
    #[doc = "                          be written directly by the settings module."]
    #[doc = " @param[in] var_len       Size of the setting variable."]
    #[doc = " @param[in] type          Type of the setting."]
    #[doc = ""]
    #[doc = " @return                  The operation result."]
    #[doc = " @retval 0                The setting was registered successfully."]
    #[doc = " @retval -1               An error occurred."]
    pub fn settings_register_readonly(
        ctx: *mut settings_t,
        section: *const ::std::os::raw::c_char,
        name: *const ::std::os::raw::c_char,
        var: *const ::std::os::raw::c_void,
        var_len: size_t,
        type_: settings_type_t,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " @brief   Create and add a watch only setting."]
    #[doc = " @details Create and add a watch only setting."]
    #[doc = ""]
    #[doc = " @param[in] ctx           Pointer to the context to use."]
    #[doc = " @param[in] section       String describing the setting section."]
    #[doc = " @param[in] name          String describing the setting name."]
    #[doc = " @param[in] var           Address of the setting variable. This location will"]
    #[doc = "                          be written directly by the settings module."]
    #[doc = " @param[in] var_len       Size of the setting variable."]
    #[doc = " @param[in] type          Type of the setting."]
    #[doc = " @param[in] notify        Notify function to be executed when the setting is"]
    #[doc = "                          updated by a write response"]
    #[doc = " @param[in] notify_context Context passed to the notify function."]
    #[doc = ""]
    #[doc = " @return                  The operation result."]
    #[doc = " @retval 0                The setting was registered successfully."]
    #[doc = " @retval -1               An error occurred."]
    pub fn settings_register_watch(
        ctx: *mut settings_t,
        section: *const ::std::os::raw::c_char,
        name: *const ::std::os::raw::c_char,
        var: *mut ::std::os::raw::c_void,
        var_len: size_t,
        type_: settings_type_t,
        notify: settings_notify_fn,
        notify_context: *mut ::std::os::raw::c_void,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " @brief   Write a new value for registered setting."]
    #[doc = " @details Call will block until write response or internal timeout."]
    #[doc = "          In case of multithreading, caller shall provide event object"]
    #[doc = "          that shall be used for waiting in wait_thd API function and"]
    #[doc = "          signaled in signal_thd API function. Also lock and unlock API"]
    #[doc = "          function implementations are mandatory when multithreading."]
    #[doc = ""]
    #[doc = " @param[in] ctx           Pointer to the context to use."]
    #[doc = " @param[in] event         Request specific event object."]
    #[doc = " @param[in] section       String describing the setting section."]
    #[doc = " @param[in] name          String describing the setting name."]
    #[doc = " @param[in] value         Address of the value variable."]
    #[doc = " @param[in] value_len     Size of the value variable."]
    #[doc = " @param[in] type          Type of the setting."]
    #[doc = ""]
    #[doc = " @return                  The operation result."]
    #[doc = " @retval -1               Sending of the request failed."]
    #[doc = " @retval 0                The setting was written successfully."]
    #[doc = " @retval >0               Response returned an error @see settings_write_res_t"]
    pub fn settings_write(
        ctx: *mut settings_t,
        event: *mut ::std::os::raw::c_void,
        section: *const ::std::os::raw::c_char,
        name: *const ::std::os::raw::c_char,
        value: *const ::std::os::raw::c_void,
        value_len: size_t,
        type_: settings_type_t,
    ) -> settings_write_res_t;
}
extern "C" {
    #[doc = " @brief   Write a new value for registered setting of type int."]
    #[doc = " @details Call will block until write response or internal timeout."]
    #[doc = "          In case of multithreading, caller shall provide event object"]
    #[doc = "          that shall be used for waiting in wait_thd API function and"]
    #[doc = "          signaled in signal_thd API function. Also lock and unlock API"]
    #[doc = "          function implementations are mandatory when multithreading."]
    #[doc = ""]
    #[doc = " @param[in] ctx           Pointer to the context to use."]
    #[doc = " @param[in] event         Request specific event object."]
    #[doc = " @param[in] section       String describing the setting section."]
    #[doc = " @param[in] name          String describing the setting name."]
    #[doc = " @param[in] value         Value to be written."]
    #[doc = ""]
    #[doc = " @return                  The operation result."]
    #[doc = " @retval -1               Sending of the request failed."]
    #[doc = " @retval 0                The setting was written successfully."]
    #[doc = " @retval >0               Response returned an error @see settings_write_res_t"]
    pub fn settings_write_int(
        ctx: *mut settings_t,
        event: *mut ::std::os::raw::c_void,
        section: *const ::std::os::raw::c_char,
        name: *const ::std::os::raw::c_char,
        value: ::std::os::raw::c_int,
    ) -> settings_write_res_t;
}
extern "C" {
    #[doc = " @brief   Write a new value for registered setting of type float."]
    #[doc = " @details Call will block until write response or internal timeout."]
    #[doc = "          In case of multithreading, caller shall provide event object"]
    #[doc = "          that shall be used for waiting in wait_thd API function and"]
    #[doc = "          signaled in signal_thd API function. Also lock and unlock API"]
    #[doc = "          function implementations are mandatory when multithreading."]
    #[doc = ""]
    #[doc = " @param[in] ctx           Pointer to the context to use."]
    #[doc = " @param[in] event         Request specific event object."]
    #[doc = " @param[in] section       String describing the setting section."]
    #[doc = " @param[in] name          String describing the setting name."]
    #[doc = " @param[in] value         Value to be written."]
    #[doc = ""]
    #[doc = " @return                  The operation result."]
    #[doc = " @retval -1               Sending of the request failed."]
    #[doc = " @retval 0                The setting was written successfully."]
    #[doc = " @retval >0               Response returned an error @see settings_write_res_t"]
    pub fn settings_write_float(
        ctx: *mut settings_t,
        event: *mut ::std::os::raw::c_void,
        section: *const ::std::os::raw::c_char,
        name: *const ::std::os::raw::c_char,
        value: f32,
    ) -> settings_write_res_t;
}
extern "C" {
    #[doc = " @brief   Write a new value for registered setting of type str."]
    #[doc = " @details Call will block until write response or internal timeout."]
    #[doc = "          In case of multithreading, caller shall provide event object"]
    #[doc = "          that shall be used for waiting in wait_thd API function and"]
    #[doc = "          signaled in signal_thd API function. Also lock and unlock API"]
    #[doc = "          function implementations are mandatory when multithreading."]
    #[doc = ""]
    #[doc = " @param[in] ctx           Pointer to the context to use."]
    #[doc = " @param[in] event         Request specific event object."]
    #[doc = " @param[in] section       String describing the setting section."]
    #[doc = " @param[in] name          String describing the setting name."]
    #[doc = " @param[in] str           Value to be written."]
    #[doc = ""]
    #[doc = " @return                  The operation result."]
    #[doc = " @retval -1               Sending of the request failed."]
    #[doc = " @retval 0                The setting was written successfully."]
    #[doc = " @retval >0               Response returned an error @see settings_write_res_t"]
    pub fn settings_write_str(
        ctx: *mut settings_t,
        event: *mut ::std::os::raw::c_void,
        section: *const ::std::os::raw::c_char,
        name: *const ::std::os::raw::c_char,
        str_: *const ::std::os::raw::c_char,
    ) -> settings_write_res_t;
}
